--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,6 @@ repositories {
 dependencies {
 //    compile ("mysql:mysql-connector-java:5.1.0")
     testCompile ([group: 'junit', name: 'junit', version: '4.11'])
+    testCompile "com.h2database:h2:1.4.192";
     compile "mysql:mysql-connector-java:5.1.30"
 }
